# http

./: .gitignore  CMakeLists.txt  Makefile  RBTree.c  RBTree.h  README.md  associative.c  associative.h  common.c  common.h  config.c  config.h  header.h  http.c  http.cfg  http.files  http.h  httpServer.h  http_test.c  httprequestheader.h  httpresponseheader.c  httpresponseheader.h  ioworker.c  ioworker.h  jobs_queue.c  jobs_queue.h  lhttpd.cfg  listener.c  listener.h  main.c  parse_config.c  parse_config.h  queue.c  queue.h  request.h  swd.cfg  swd_test.cfg  test.c  worker.c  worker.h
Make/: Makefile
error_pages/: 400.html  404.html  500.html  501.html
etc/systemd/system/: swd.service
research/: README.md  compare_case_insensitive  compare_case_insensitive.c  compare_case_sensitive  compare_case_sensitive.c  http.h  tmp.c  tmp_orig.c
tests/: associative_test.c  cfg_test.c  jobsqueue_test.c  jobsqueue_test.h  queue_test.c  queue_test.h  queues_test.c  rbtree_test.c  test_http_parsing.c
